fixed overflow on comments and titles

--- a/public/css/comment.css
+++ b/public/css/comment.css
@@ -37,7 +37,9 @@
 }
 
 .commentText {
-  word-break: break-all;
+  table-layout: fixed;
+  width: 100%;
+  word-wrap: break-word;
 }
 
 .commentMeta {
