--- a/public/css/contentRow.css
+++ b/public/css/contentRow.css
@@ -25,7 +25,9 @@
   font-size: 15px;
 }
 .contentTitle {
-  display:flex;
+  table-layout: fixed;
+  width: 100%;
+  word-wrap: break-word;
 }
 
 .contentMetaData {
